--- a/dog-app/src/app/routes/not-found-route/not-found-route.component.scss
+++ b/dog-app/src/app/routes/not-found-route/not-found-route.component.scss
@@ -7,5 +7,5 @@
 }
 
 span {
-  font-size: 100px;
+  font-size: 10rem;
 }
